--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Enable corepack to use yarn 4
+        run: corepack enable
       - name: Detect package manager
         id: detect-package-manager
         run: |
